--- a/ae/ae-13-candy-ranking-A.qmd
+++ b/ae/ae-13-candy-ranking-A.qmd
@@ -12,16 +12,15 @@ execute:
   error: false
 ---
 
-In this application exercise, we will:
+#### In this application exercise, we will:
 
--   Use backwards elimination to do model selection.
-    Make sure to show each step of decision (though you don't have to interpret the models at each stage).
+1.  Load the Penguins Dataset: Import and explore the dataset to understand its structure and the features available for analysis.
 
--   Yes, this is tedious.
-    And yes, there are ways of automating it.
-    But for now, go through the process "manually", to get a good sense of how the model selection algorithm works.
+2.  Preprocess the Data: Clean the data by handling missing values and standardize the numerical features for PCA.
 
--   Provide interpretations for the slopes for the final model you arrive at and create at least one visualization that supports your narrative.
+3.  Perform PCA: Apply Principal Component Analysis to reduce the dimensionality of the data and extract the principal components.
+
+4.  Visualize the PCA Result: Create a scatter plot of the principal components to visualize the clustering of different penguin species.
 
 ```{python}
 import pandas as pd
