--- a/exam-review/exam-2-review-A.qmd
+++ b/exam-review/exam-2-review-A.qmd
@@ -7,21 +7,31 @@ editor_options:
   chunk_output_type: console
 ---
 
-1.  Take a random sample of size 25, with replacement, from the original sample. Calculate the proportion of students in this simulated sample who work 5 or more hours. Repeat this process 1000 times to build the bootstrap distribution. Take the middle 95% of this distribution to construct a 95% confidence interval for the true proportion of statistics majors who work 5 or more hours.
+1.  Take a random sample of size 25, with replacement, from the original sample.
+    Calculate the proportion of students in this simulated sample who work 5 or more hours.
+    Repeat this process 1000 times to build the bootstrap distribution.
+    Take the middle 95% of this distribution to construct a 95% confidence interval for the true proportion of statistics majors who work 5 or more hours.
 
-2.  The exact 95% CI is (40%, 80%). Answers reasonably close to the upper and lower bounds would be accepted.
+2.  The exact 95% CI is (40%, 80%).
+    Answers reasonably close to the upper and lower bounds would be accepted.
 
-3.  \(e\) None of the above. The correct interpretation is “We are 95% confident that 40% to 80% of statistics majors work at least 5 hours per week.”
+3.  \(e\) None of the above.
+    The correct interpretation is “We are 95% confident that 40% to 80% of statistics majors work at least 5 hours per week.”
 
 4.  \(c\) For every additional \$1,000 of annual salary, the model predicts the raise to be higher, on average, by 0.016%.
 
 5.  $R^2$ of `raise_2_fit` is higher than $R^2$ of `raise_1_fit` since `raise_2_fit` has one more predictor and $R^2$ always
 
-6.  The reference level of `performance_rating` is High, since it’s the first level alphabetically. Therefore, the coefficient -2.40% is the predicted difference in raise comparing High to Successful. In this context a negative coefficient makes sense since we would expect those with High performance rating to get higher raises than those with Successful performance.
+6.  The reference level of `performance_rating` is High, since it’s the first level alphabetically.
+    Therefore, the coefficient -2.40% is the predicted difference in raise comparing High to Successful.
+    In this context a negative coefficient makes sense since we would expect those with High performance rating to get higher raises than those with Successful performance.
 
 7.  \(a\) “Poor”, “Successful”, “High”, “Top”.
 
-8.  Option 3. It's a linear model with no interaction effect, so parallel lines. And since the slope for `salary_typeSalaried` is positive, its intercept is higher. The equations of the lines are as follows:
+8.  Option 3.
+    It's a linear model with no interaction effect, so parallel lines.
+    And since the slope for `salary_typeSalaried` is positive, its intercept is higher.
+    The equations of the lines are as follows:
 
     -   Hourly:
 
@@ -49,7 +59,8 @@ editor_options:
 
 11. \(a\) and (d).
 
-12. Let $u(x) = \sin(x^2) + \cos(ax)$. Then, $g(x) = [u(x)]^k$.
+12. Let $u(x) = \sin(x^2) + \cos(ax)$.
+    Then, $g(x) = [u(x)]^k$.
 
     Using the chain rule, we get:
 
@@ -99,12 +110,11 @@ editor_options:
 
 14. The transpose of the vector $y$ is:
 
-    $y^\top = \begin{bmatrix} y_1 & y_2 & y_3 \end{bmatrix}$
+    $x^\top = \begin{bmatrix} x_1 & x_2 & x_3 & x_4\end{bmatrix}$
 
-15. The transpose of the matrix $N$ is:
-    $N^\top = \begin{bmatrix}
-    n_{11} & n_{21} & n_{31} \\
-    n_{12} & n_{22} & n_{32}
+15. The transpose of the matrix $N$ is: $N^\top = \begin{bmatrix}
+    n_{11} & n_{21} & n_{31} & n_{41} \\
+    n_{12} & n_{22} & n_{32} & n_{42}
     \end{bmatrix}$
 
 16. Solution parts:
