--- a/labs/lab-1.qmd
+++ b/labs/lab-1.qmd
@@ -1,14 +1,18 @@
 ---
-title: "Lab 1 - Data visualization"
+title: "Lab 1 - Introduction to Python"
+jupyter: python3
+execute: 
+  warning: false
+  error: false
 ---
 
 # Introduction
 
 This lab will introduce you to the course computing workflow.
-The main goal is to reinforce our demo of R and RStudio, which we will be using throughout the course both to learn the statistical concepts discussed in the course and to analyze real data and come to informed conclusions.
+The main goal is to reinforce our demo of Python and VS Code, which we will be using throughout the course both to learn the data science concepts discussed in the course and to analyze real data and come to informed conclusions.
 
 ::: callout-note
-R is the name of the programming language itself and RStudio is a convenient interface, commonly referred to as an integrated development environment or an IDE, for short.
+Python is the name of the programming language itself and VS Code (via Jupyter Notebooks) is a convenient interface, commonly referred to as an integrated development environment or an IDE, for short.
 :::
 
 An additional goal is to reinforce Git and GitHub, the version control, web hosting, and collaboration systems that we will be using throughout the course.
@@ -18,8 +22,8 @@ Git is a version control system (like "Track Changes" features from Microsoft Wo
 :::
 
 As the labs progress, you are encouraged to explore beyond what the labs dictate; a willingness to experiment will make you a much better programmer.
-Before we get to that stage, however, you need to build some basic fluency in R.
-Today we begin with the fundamental building blocks of R and RStudio: the interface, reading in data, and basic commands.
+Before we get to that stage, however, you need to build some basic fluency in Python.
+Today we begin with the fundamental building blocks of Python and VS Code: the interface, reading in data, and basic commands.
 
 ::: callout-warning
 This lab assumes that you have already completed [Lab 0](/labs/lab-0.html).
@@ -30,71 +34,57 @@ If you have not, please go back and do that first before proceeding.
 
 By the end of the lab, you will...
 
--   Be familiar with the workflow using R, RStudio, Git, and GitHub
--   Gain practice writing a reproducible report using Quarto
+-   Be familiar with the workflow using Python, VS Code, Git, and GitHub
+-   Gain practice writing a reproducible report using Jupyter
 -   Practice version control using Git and GitHub
--   Be able to create data visualizations using `ggplot2`
+-   Understand fundamental syntax in Python
 
 ## Getting started
 
-### Log in to RStudio
+### Clone the repo & start new VS Code window
 
--   Go to <https://cmgr.oit.duke.edu/containers> and login with your Duke NetID and Password.
--   Click `STA198-199` under My reservations to log into your container. You should now see the RStudio environment.
-
-### Clone the repo & start new RStudio project
-
--   Go to the course organization at [github.com/sta199-s24](https://github.com/sta199-s24) organization on GitHub.
+-   Go to the course organization at [github.com/INFO-511-F24](https://github.com/INFO-511-F24) organization on GitHub.
     Click on the repo with the prefix **lab-1**.
     It contains the starter documents you need to complete the lab.
 
--   Click on the green **CODE** button, select **Use SSH** (this might already be selected by default, and if it is, you'll see the text **Clone with SSH**).
+-   Click on the green **CODE** button, select **Use HTTPS** (this might already be selected by default).
     Click on the clipboard icon to copy the repo URL.
 
--   In RStudio, go to *File* ➛ *New Project* ➛*Version Control* ➛ *Git*.
+-   In VS Code, go to *File* ➛ *New Window* ➛*Clone Git Repository (under **Start**)*.
 
--   Copy and paste the URL of your assignment repo into the dialog box *Repository URL*. Again, please make sure to have *SSH* highlighted under *Clone* when you copy the address.
+-   Copy and paste the URL of your assignment repo into the dialog box *Provide repository URL or pick a repository source*.
 
--   Click *Create Project*, and the files from your GitHub repo will be displayed in the *Files* pane in RStudio.
-
--   Click *lab-1.qmd* to open the template Quarto file.
+-   Click *lab-1.ipynb* to open the template Jupyter notebook file.
     This is where you will write up your code and narrative for the lab.
 
-### R and R Studio
+-   Also see similar steps within the [Setting up Python](https://datasciaz.netlify.app/computing/computing-python.html#prepare-vs-code-for-python) page on the course website.
 
-Below are the components of the RStudio IDE.
+### Python and VS Code
 
-![](images/lab-0/rstudio.png){fig-alt="RStudio IDE"}
+Below are the components of the VS Code IDE.
 
-Below are the components of a Quarto (.qmd) file.
+![](images/tour-vs-code.png){fig-alt="VS Code IDE" fig-align="center"}
 
-![](images/lab-0/quarto.png){fig-alt="Quarto document"}
+Below are the components of a Jupyter notebook (.ipynb) file.
 
-### YAML
-
-The top portion of your R Markdown file (between the three dashed lines) is called **YAML**.
-It stands for "YAML Ain't Markup Language".
-It is a human friendly data representation for all programming languages.
-All you need to know is that this area is called the YAML (we will refer to it as such) and that it contains meta information about your document.
+![](images/tour-jupyter.png){fig-align="center"}
 
 ::: callout-important
-Open the Quarto (`.qmd`) file in your project, change the author name to your name, and render the document.
-Examine the rendered document.
+Open the Jupyter notebook (`.ipynb`) file in your project, change the author name to your name, and render the document.
+Examine the document.
 :::
 
 ### Committing changes
 
-Now, go to the Git pane in your RStudio instance.
-This will be in the top right hand corner in a separate tab.
+Now, go to the Git pane in your VS Code window (third icon on the left - above there is a blue (2) next to it).
 
-If you have made changes to your Quarto (.qmd) file, you should see it listed here.
-Click on it to select it in this list and then click on **Diff**.
-This shows you the *diff*erence between the last committed state of the document and its current state including changes.
+If you have made changes to your Jupyter Notebook (.ipynb) file, you should see it listed here.
+Click on it to see the differences.
+This shows you the *difference* between the last committed state of the document and its current state including changes.
 You should see deletions in red and additions in green.
 
 If you're happy with these changes, we'll prepare the changes to be pushed to your remote repository.
-First, **stage** your changes by checking the appropriate box on the files you want to prepare.
-Next, write a meaningful commit message (for instance, "updated author name") in the **Commit message** box.
+First, write a meaningful commit message (for instance, "update author name") in the **Message** box.
 Finally, click **Commit**.
 Note that every commit needs to have a commit message associated with it.
 
@@ -113,313 +103,207 @@ If you see this, all your changes are on GitHub and you're good to go!
 
 Now that you have made an update and committed this change, it's time to push these changes to your repo on GitHub.
 
-In order to push your changes to GitHub, you must have **staged** your **commit** to be pushed.
+In order to push your changes to GitHub, you normally must have **staged** your **commit** to be pushed.
 click on **Push**.
+On VS Code however, the staging step has been done for you.
 
 ## Packages
 
-In this lab we will work with the **tidyverse** package, which is a collection of packages for doing data analysis in a "tidy" way.
+In this lab we will work with the **numpy** and **pandas** packages, which is a collection of packages for doing data exploration and analysis in Python.
 
-```{r}
+```{python}
 #| eval: true
 #| message: false
 
-library(tidyverse)
+import statistics
+import pandas as pd
+import numpy as np
+import string
 ```
 
-**Render** the document which loads this package with the `library()` function.
-
-::: callout-note
-The rendered document will include a message about which packages the tidyverse package is loading along with it.
-It's just R being informative, a **message** does not indicate anything is wrong (it's not a **warning** or an **error**).
-:::
-
-The tidyverse is a meta-package.
-When you load it you get nine packages loaded for you:
-
--   **dplyr**: for data wrangling
--   **forcats**: for dealing with factors
--   **ggplot2**: for data visualization
--   **lubridate**: for dealing with dates
--   **purrr**: for iteration with functional programming
--   **readr**: for reading and writing data
--   **stringr**: for string manipulation
--   **tibble**: for modern, tidy data frames
--   **tidyr**: for data tidying and rectangling
-
-The message that's printed when you load the package tells you which versions of these packages are loaded as well as any conflicts they may have introduced, e.g., the `filter()` function from dplyr has now masked (overwritten) the `filter()` function available in base R (and that's ok, we'll use `dplyr::filter()` anyway).
-
-You can now **Render** your template document and see the results.
+**Run All** in the document which loads these packages with the `import` function.
 
 ## Guidelines
 
-As we've discussed in lecture, your plots should include an informative title, axes should be labeled, and careful consideration should be given to aesthetic choices.
-
-In addition, the code should all the code should be be able to be read (not run off the page) when you render to PDF.
-Make sure that is the case, and add line breaks where the code is running off the page.[^1]
-
-[^1]: Remember, haikus not novellas when writing code!
-
+::: callout-note
 Remember that continuing to develop a sound workflow for reproducible data analysis is important as you complete the lab and other assignments in this course.
-There will be periodic reminders in this assignment to remind you to **render, commit, and push** your changes to GitHub.
+There will be periodic reminders in this assignment to remind you to **Run all, commit, and sync** your changes to GitHub.
 You should have at least 3 commits with meaningful commit messages by the end of the assignment.
+:::
 
 # Questions
 
-## Part 1
+## Python Basics
 
-**Let's take a trip to the Midwest!**
+### Question 1: Variables and Types
 
-We will use the `midwest` data frame for this lab.
-It is part of the **ggplot2** R package, so the `midwest` data set is automatically loaded when you load the tidyverse package.
+-   Define two variables: an integer named `age` with a value of 25 and a string named `course` with the value "Data Mining".
 
-The data contains demographic characteristics of counties in the Midwest region of the United States.
+-   Print their values and types using the `type()` function.
 
-Because the data set is part of the **ggplot2** package, you can read documentation for the data set, including variable definitions by typing `?midwest` in the Console or searching for `midwest` in the Help pane.
-
-### Question 1
-
-Visualize the distribution of population density of counties using a histogram with `geom_histogram()` with four separate binwidths: a binwidth of 100, a binwidth of 1,000, a binwidth of 10,000, and a binwidth of 100,000.
-For example, you can create the first plot with:
-
-```{r}
-ggplot(midwest, aes(x = popdensity)) +
-  geom_histogram(binwidth = 100) +
-  labs(
-    x = "Population density",
-    y = "Count",
-    title = "Population density of midwesten counties",
-    subtitle = "Binwidth = 100"
-  )
+```{python}
+# add code here.
 ```
 
-You will need to make four different histograms.
-Make sure to set informative titles and axis labels for each of your plots.
-Then, comment on which binwidth is most appropriate for these data and why.
-
 ::: render-commit-push
-Render, commit, and push your changes to GitHub with the commit message "Added answer for Question 1".
+Run all, commit, and sync your changes to GitHub with the commit message "Added answer for Question 1".
 
 Make sure to commit and push all changed files so that your Git pane is empty afterward.
 :::
 
-### Question 2
+### Question 2: Control Structures
 
-Visualize the distribution of population density of counties again, this time using a boxplot with `geom_boxplot()`.
-Make sure to set informative titles and axis labels for your plot.
-Then, using information as needed from the box plot as well as the histogram from Question 1, describe the distribution of population density of counties and comment on any potential outliers, making sure to identify at least one county that is a clear outlier by name in your narrative and commenting on whether it makes sense to you that this county is an outlier.
-You can use the data viewer to identify the outliers interactively, you do not have to write code to identify them.
+-   Write a function `is_prime(num)` that takes an integer and returns `True` if the number is a prime number, `False` otherwise.
+
+-   Include a loop and an appropriate control flow statement to check for primality.
+
+```{python}
+# add code here.
+```
 
 ::: render-commit-push
-Render, commit, and push your changes to GitHub with the commit message "Added answer for Question 2".
+Run all, commit, and sync your changes to GitHub with the commit message "Added answer for Question 2".
+
+Make sure to commit and push all changed files so that your Git pane is empty afterward.
+
+<br>
+:::
+
+### Question 3: Data Structures
+
+-   Create a dictionary named `student_grades` with keys as student names and values as their grades (A, B, C, D, F).
+
+-   Write a loop to print out each student's name and grade in the format: "Student \[Name\] has grade \[Grade\]".
+
+```{python}
+# add code here.
+```
+
+::: render-commit-push
+Run all, commit, and sync your changes to GitHub with the commit message "Added answer for Question 3".
+
+Make sure to commit and push all changed files so that your Git pane is empty afterward.
+<br>
+:::
+
+### Question 4: List Comprehension & Functions
+
+-   Using list comprehension, generate a list of tuples where each tuple is `(number, square of number)` for numbers between 1 and 10.
+
+-   Write a function `calculate_stats(numbers)` that returns the mean, median, and standard deviation of a list of numbers.
+    Utilize functions from the **`statistics`** module.
+
+```{python}
+# add code here.
+```
+
+::: render-commit-push
+Run all, commit, and sync your changes to GitHub with the commit message "Added answer for Question 4".
 
 Make sure to commit and push all changed files so that your Git pane is empty afterward.
 :::
 
-### Question 3
+## NumPy Introduction
 
-Create a scatterplot of the percentage below poverty (`percbelowpoverty` on the y-axis) versus percentage of people with a college degree (`percollege` on the x-axis), where the color [**and**]{.underline} shape of points are determined by `state`.
-Make sure to set informative titles, axis, and legend labels for your plot.
-First, describe the overall relationship between percentage of people with a college degree and percentage below poverty in Midwestern states, making sure to identify at least one county that is a clear outlier by name in your narrative.
-You can use the data viewer to identify the outliers interactively, you do not have to write code to identify them.
-Then, comment on whether you can identify how this relationship varies across states.
+### Question 5: NumPy Arrays
 
-::: render-commit-push
-Render, commit, and push your changes to GitHub with the commit message "Added answer for Question 3".
+-   Create a NumPy array `A` of shape (10,10) with values ranging from 0 to 99.
 
-Make sure to commit and push all changed files so that your Git pane is empty afterward.
-:::
+-   Calculate the determinant of matrix `A` (use `numpy.linalg.det`).
+    Print the result.
 
-### Question 4
-
-Now, let's examine the relationship between the same two variables, once again using different colors and shapes to represent each state, and using a separate plot for each state, i.e., with faceting with `facet_wrap()`.
-In addition to points (`geom_point()`), represent the data with a smooth curve fit to the data with `geom_smooth()`, with the argument `se = FALSE`.
-Make sure to set informative titles, axis, and legend labels for your plot.
-Which plot do you prefer - this plot or the plot in Question 3?
-Briefly explain your choice.
-
-::: callout-note
-`se = FALSE` removes the confidence bands around the line.
-These bands show the uncertainty around the smooth curve.
-We'll discuss uncertainty around estimates later in the course and bring these bands back then.
-:::
+```{python}
+# add code here.
+```
 
 ::: render-commit-push
-Render, commit, and push your changes to GitHub with the commit message "Added answer for Question 4".
-
-Make sure to commit and push all changed files so that your Git pane is empty afterward.
-:::
-
-### Question 5
-
-*Do some states have counties that tend to be geographically larger than others?*
-
-To explore this question, create side-by-side boxplots of area (`area`) of a county based on state (`state`).
-How do typical county area sizes compare across states?
-How do variabilities of county sizes compare across states?
-Which state has the single largest county?
-Identify the name of this county.
-You can use the data viewer to identify it interactively, you do not have to write code.
-
-::: render-commit-push
-Now is another good time to render, commit, and push your changes to GitHub with a meaningful commit message.
+Now is another good time to Run all, commit, and sync your changes to GitHub with a meaningful commit message.
 
 Once again, make sure to commit and push all changed files so that your Git pane is empty afterwards.
 :::
 
-### Question 6
+### Question 6: Array Operations
 
-*Do some states have a higher percentage of their counties located in a metropolitan area?*
+Given a 1D NumPy array of size 10, normalize it (i.e., scale the values to range between 0 and 1).
 
-Create a segmented bar chart with one bar per state and the bar filled with colors according to the value of `metro` – one color indicating `Yes` and the other color indicating `No` for whether a county is considered to be a metro area.
-The y-axis of the segmented barplot should range from 0 to 1, indicating proportions.
-Compare the percentage of counties in metro areas across the states based on this plot.
-Make sure to supplement your narrative with rough estimates of these percentages.
-
-::: callout-tip
-## Hint
-
-For this question, you should begin with the data wrangling pipeline below.
-We will learn more about data wrangling in the coming weeks, so this is a mini-preview.
-This pipeline creates a new variable called `metro` based on the value of the existing variable called `inmetro`.
-If the value of `inmetro` is equal to 1 (`inmetro == 1`), it sets the value of `metro` to `"Yes"`, and if not, it sets the value of `metro` to `"No"`.
-The resulting data frame is assigned back to `midwest`, overwriting the existing `midwest` data frame with a version that includes the new `metro` variable.
-
-```{r}
-#| label: hint
-#| eval: false
-
-midwest <- midwest |>
-  mutate(metro = if_else(inmetro == 1, "Yes", "No"))
+```{python}
+# add code here.
 ```
-:::
 
 ::: render-commit-push
-Now is another good time to render, commit, and push your changes to GitHub with a meaningful commit message.
+Now is another good time to Run all, commit, and sync your changes to GitHub with a meaningful commit message.
 
 And once again, make sure to commit and push all changed files so that your Git pane is empty afterward.
 We keep repeating this because it's important and because we see students forget to do this.
 So take a moment to make sure you're following along with the version control instructions.
 :::
 
-### Question 7
+### Question 7: Extract and Print Elements
 
-Recreate the plot below, and then give it a title.
-Then, identify at least one county that is a clear outlier in Wisconsin (WI) by name.
-You can use the data viewer to identify them interactively, you do not have to write code.
-Comment on the population composition of this county by investigating the percentage of other races living there.
+-   Extract and print all the elements from the third column of a given 2D NumPy array.
 
-```{r}
-#| eval: true
-#| echo: false
+-   Use a for loop to iterate through each element of this column and print their square roots.
 
-ggplot(
-  midwest,
-  aes(x = percollege, y = percbelowpoverty, color = percwhite)
-) +
-  geom_point(size = 2, alpha = 0.5) +
-  facet_wrap(~state) +
-  theme_minimal() +
-  labs(
-    title = "ADD TITLE",
-    x = "% college educated",
-    y = "% below poverty line",
-    color = "% white"
-  )
+```{python}
+# add code here.
 ```
 
-::: callout-tip
-## Hint
-
--   [The `ggplot2` reference for themes](https://ggplot2.tidyverse.org/reference/ggtheme.html) will be helpful in determining the theme.
--   The `size` of the points is 2.
--   The transparency (`alpha`) of the points is 0.5.
--   You can put line breaks in labels with `\n`.
-:::
-
 ::: render-commit-push
-Render, commit, and push your final changes to GitHub with a meaningful commit message.
-
+Run all, commit, and sync your final changes to GitHub with a meaningful commit message.
+<br>
 Make sure to commit and push all changed files so that your Git pane is empty afterwards.
 :::
 
-## Part 2
+## Pandas Introduction
 
-**Enough about the Midwest!**
+### Question 8: Series and DataFrame Basics
 
-In this part we will use a new, more recent, and potentially more relevant dataset on counties in North Carolina.
+-   Create a Pandas Series with the labels as the first 10 letters of the alphabet and the values as random integers from 1 to 100.
 
-This dataset is stored in a file called `nc-county.csv` in the `data` folder of your project/repository.
+-   Convert this Series into a DataFrame with the column name `Random_Numbers`.
 
-You can read this file into R with the following code:
-
-```{r}
-#| eval: false
-
-nc_county <- read_csv("data/nc-county.csv")
+```{python}
+# add code here.
 ```
 
-This will read the CSV (comma separated values) file from the `data` folder and store the dataset as a data frame called `nc_county` in R.
+### Question 9: Data Importing and Inspection
 
-The variables in the dataset and their descriptions are as follows:
+-   Load a CSV file into a Pandas DataFrame.
+    The CSV has columns `id`, `name`, `score`.
 
--   `county`: Name of county.
--   `state_abb`: State abbreviation (NC).
--   `state_name`: State name (North Carolina).
--   `land_area_m2`: Land area of county in meters-squared, based on the 2020 census.
--   `land_area_mi2`: Land area of county in miles-squared, based on the 2020 census.
--   `population`: Population of county, based on the 2020 census.
--   `density`: Population density calculated as population divided by land area in miles-squared.
+-   Print out the data types of the columns and the first 10 rows of the DataFrame.
 
-In addition to being more recent and more relevant, this dataset is also more complete in the sense that we know the units of population density: people per mile-squared!
+```{python}
+# add code here.
+```
 
-### Question 8
+### Question 10: **Data Manipulation and Cleaning**
 
-First, guess what the relationship between population density and land area might be – positive?
-negative?
-no relationship?
+**Data Manipulation and Cleaning**:
 
-Then, make a scatter plot of population density (`density` on the y-axis) vs. land area in miles-squared (`land_area_mi2` on the x-axis).
-Make sure to set an informative title and axis labels for your plot.
-Describe the relationship.
-Was your guess correct?
+-   Replace all instances of a missing 'score' with the median score.
 
-### Question 9
+-   Add a new column 'score_normalized' that contains the 'score' column normalized to have a mean of 0 and a standard deviation of 1.
 
-Now make a scatter plot of population density (`density` on the y-axis) vs. land area in meters-squared (`land_area_m2` on the x-axis).
-Make sure to set an informative title and axis labels for your plot.
-Comment on how this scatterplot compares to the one in Exercise 8 — is the relationship displayed same or different.
-Explain why.
+```{python}
+# add code here.
+```
 
-### Question 10
-
-Did you select your pages on Gradescope?
-You don't need to write an answer for this question, if you select your pages when you upload your lab to Gradescope, you'll get full points on this question.
-Otherwise, you'll get a 0 on this question.[^2]
-
-[^2]: We're assigning points to this seemingly trivial task because not selecting your pages and questions will greatly slow down the grading.
-    So we want to make sure you're properly motivated to complete this task!
+::: callout-tip
+Its okay if you don't get this last question 100% correct.
+We will cover this thoroughly in the following weeks.
+:::
 
 # Wrap-up
 
 ## Submission
 
-Once you are finished with the lab, you will submit your final PDF document to Gradescope.
-
 ::: callout-warning
 Before you wrap up the assignment, make sure all of your documents are updated on your GitHub repo.
 We will be checking these to make sure you have been practicing how to commit and push changes.
 
-You must turn in a PDF file to the Gradescope page by the submission deadline to be considered "on time".
+You must turn in the .ipynb file by the submission deadline to be considered "on time".
 :::
-
-To submit your assignment:
-
--   Go to <http://www.gradescope.com> and click *Log in* in the top right corner.
--   Click *School Credentials* $\rightarrow$ *Duke NetID* and log in using your NetID credentials.
--   Click on your *STA 199* course.
--   Click on the assignment, and you'll be prompted to submit it.
--   Mark all the pages associated with question. All the pages of your lab should be associated with at least one question (i.e., should be "checked").
 
 ::: callout-important
 ## Checklist
@@ -427,17 +311,15 @@ To submit your assignment:
 Make sure you have:
 
 -   attempted all questions
--   rendered your Quarto document
--   committed and pushed everything to your GitHub repository such that the Git pane in RStudio is empty
--   uploaded your PDF to Gradescope
--   selected pages associated with each question on Gradescope
+-   run all code in your Jupyter notebook
+-   committed and pushed everything to your GitHub repository such that the Git pane in VS Code is empty
 :::
 
 ## Grading
 
 The lab is graded out of a total of 50 points.
 
-On Questions 1 through 9, you can earn up to 5 points on each question:
+On Questions 1 through 10, you can earn up to 5 points on each question:
 
 -   5: Response shows excellent understanding and addresses all or almost all of the rubric items.
 
@@ -450,8 +332,3 @@ On Questions 1 through 9, you can earn up to 5 points on each question:
 -   1: Response does not show sufficient effort or understanding and/or is largely incomplete.
 
 -   0: No attempt.
-
-On Question 10, you can earn either 0 or 5 points for selecting questions and pages on Gradescope:
-
--   5: Selected questions and pages on Gradescope.
--   0: Did not select some or all questions and pages on Gradescope.
