--- a/labs/lab-4.qmd
+++ b/labs/lab-4.qmd
@@ -1,244 +1,192 @@
 ---
-title: "Lab 4 - Web scraping and ethics"
+title: "Lab 4 - Ethics"
 categories: "Lab"
+jupyter: python3
+execute: 
+  warning: false
+  error: false
 ---
+
+```{python}
+#| include: false
+#| eval: true
+
+import pandas as pd
+import seaborn as sns
+import matplotlib.pyplot as plt
+```
 
 # Introduction
 
-In this lab you'll build the data wrangling and visualization skills you've developed so far and data tidying and joining to your repertoire.
-
-::: callout-note
-This lab assumes you've completed the labs so far and doesn't repeat setup and overview content from those labs.
-If you have not yet done those, you should go back and review the previous labs before starting on this one.
-:::
-
-## Learning objectives
-
-By the end of the lab, you will...
-
--   Be able to scrape data from web pages using the **rvest** package
--   Clean and analyze the data you have scraped
--   Come up with your own questions about the data and answer them
--   Be able to use the **robotstxt** package as well as read the Terms of Use/Service of a website to check if a website allows scraping
--   Read articles on the ethics of AI tools and LLMs and reflect on the implications of these tools for society
-
-## Getting started
-
-Log in to RStudio, clone your `lab-4` repo from GitHub, open your `lab-4.qmd` document, and get started!
-
-::: {.callout-tip collapse="true"}
-## Click here if you prefer to see step-by-step instructions
-
-### Log in to RStudio
-
--   Go to <https://cmgr.oit.duke.edu/containers> and log in with your Duke NetID and Password.
--   Click `STA198-199` under My reservations to log into your container. You should now see the RStudio environment.
-
-### Clone the repo & start new RStudio project
-
--   Go to the course organization at [github.com/sta199-s24](https://github.com/sta199-s24) organization on GitHub.
-    Click on the repo with the prefix **lab-3**.
-    It contains the starter documents you need to complete the lab.
-
--   Click on the green **CODE** button, select **Use SSH** (this might already be selected by default, and if it is, you'll see the text **Clone with SSH**).
-    Click on the clipboard icon to copy the repo URL.
-
--   In RStudio, go to *File* ➛ *New Project* ➛*Version Control* ➛ *Git*.
-
--   Copy and paste the URL of your assignment repo into the dialog box *Repository URL*. Again, please make sure to have *SSH* highlighted under *Clone* when you copy the address.
-
--   Click *Create Project*, and the files from your GitHub repo will be displayed in the *Files* pane in RStudio.
-
--   Click *lab-3.qmd* to open the template Quarto file.
-    This is where you will write up your code and narrative for the lab.
-
-### First steps
-
-In `lab-3.qmd`, update the `author` field to your name, render your document and examine the changes.
-Then, in the Git pane, click on **Diff** to view your changes, add a commit message (e.g., "Added author name"), and click **Commit**.
-Then, push the changes to your GitHub repository, and in your browser confirm that these changes have indeed propagated to your repository.
-:::
-
-## Packages
-
-In this lab we will work with the following packages:
-
--   **tidyverse**: for tidy data wrangling and visualization
--   **rvest**: for data scraping
--   **robotstxt**: for checking the robots.txt files of websites for permission to scrape data
--   **knitr:** for making a pretty table
-
-Some of the later questions in the lab ask you to come up with your own questions about the data and answer them.
-If this requires additional packages, you should feel free to load them as well.
+In this lab you'll review and get practice with a variety of concepts, methods, and tools you've encountered thus far, with a focus on misrepresentation and ethics.
 
 ## Guidelines
 
 As we've discussed in lecture, your plots should include an informative title, axes should be labeled, and careful consideration should be given to aesthetic choices.
 
-In addition, the code should all the code should be be able to be read (not run off the page) when you render to PDF.
-Make sure that is the case, and add line breaks where the code is running off the page.[^1]
-
-[^1]: Remember, haikus not novellas when writing code!
-
 ::: callout-note
-Continuing to develop a sound workflow for reproducible data analysis is important as you complete the lab and other assignments in this course.
-There will be periodic reminders in this assignment to remind you to **render, commit, and push** your changes to GitHub.
+Remember that continuing to develop a sound workflow for reproducible data analysis is important as you complete the lab and other assignments in this course.
+There will be periodic reminders in this assignment to remind you to **Run all, commit, and sync** your changes to GitHub.
 You should have at least 3 commits with meaningful commit messages by the end of the assignment.
 :::
 
-# Questions
+# Part 1 - Misrepresentation
 
-## Part 1 - Scraping data from web pages
+## Question 1
 
-### Question 1
+The following chart was [shared](https://twitter.com/GraphCrimes/status/1566264004288331776) by \@GraphCrimes on X/Twitter on September 3, 2022.
 
-::: callout-important
-You do not need to do anything in your Quarto file for this question.
-All of the work for this question will be done in `lab-4-clubs-scrape.R`.
-:::
+![](images/private-sector.png){fig-align="center"}
 
-Your task for this question is to scrape data on Duke Student Groups from <https://dukegroups.com/club_signup?view=all>.
-Scroll down and click on load all groups.
+a.  What is misleading about this graph?
+b.  Suppose you wanted to recreate this plot, with improvements to avoid its misleading pitfalls from part (a). You would obviously need the data from the survey in order to be able to do that. How many observations would this data have? How many variables (at least) should it have, and what should those variables be?
+c.  Load the data for this survey from `data/survation.csv`. Confirm that the data match the percentages from the visualization. That is, calculate the percentages of public sector, private sector, don't know for each of the services and check that they match the percentages from the plot.
 
-You will do this in `lab-4-clubs-scrape.R`, which gives some scaffolding for you to complete this task.
-The goal is to scrape information on
+## Question 2
 
--   Name of club: `names`
--   Link to club page: `urls`
--   Type of club: `club_types`
--   Resources of club: `resources`
--   Membership type of club: `membership_types`
--   Checkboxes that indicate the club is open / closed for joining: `membership_status`
+Create an improved version of the visualization.
+Your improved visualization:
 
-The scheme shown in the image should also help you figure out which pieces of information come from which parts of the website.
+-   should also be a stacked bar chart with services on the y-axis, presented in the same order as the original plot, and services to create the segments of the plot, and presented in the same order as the original plot
 
-![](images/clubs-scrape-scheme.png){fig-align="center" width="1000"}
+-   should have the same legend location
 
-You will scrape each of these as individual vectors, clean them up a bit, and then bring them together in a data frame (a `tibble`) and write it out to a CSV file called `clubs.csv` in the `data` folder of your project/repository.
+-   should have the same title and caption
+
+-   does not need to have a bolded title or a gray background
+
+How does the improved visualization look different than the original?
+Does it send a different message at a first glance?
 
 ::: callout-tip
-## Hint
+Use `\n` to add a line break to your title.
+And note that since the title is very long, it might run off the page in your code.
+That's ok!
 
-There are some hints for cleaning the data in the script provided for you.
-For example, some of the fields you scrape will have some extraneous characters in them like `\n`s, `\r`s, etc.
-Two examples are provided below.
-
-```{r}
-name <- "\r Academic Advising Center\r"
-url <- "\r\n\t\t\t\t\t\t\t\thttps://dukegroups.com/AOTA/\r\n\t\t\t\t\t\t\t"
-```
-
-To clean these up, first, we would want to *remove* the extraneous characters.
-The **stringr** package (which comes with the tidyverse) offers some great functions for dealing with such nuisance, see <https://stringr.tidyverse.org/reference/index.html> for a full list.
-In this case, we can use the following steps:
-
--   `str_remove()` to remove the character(s) once or `str_remove_all()` to remove all occurences of the character(s) we don't want
-
-```{r}
-name |>
-  str_remove_all("\r")
-url |>
-  str_remove_all("\r") |>
-  str_remove_all("\n") |>
-  str_remove_all("\t")
-```
-
--   `str_trim()` for trimming white space at the beginning and end of text strings
-
-```{r}
-name |>
-  str_remove_all("\r") |>
-  str_trim()
-```
-
-These types of functions will be helpful for cleaning the data you scrape as well.
+Additionally, the colors used in the plot are `#808080`, `#FF3205`, and `#006697`.
 :::
 
-## Part 2 - Data cleaning
+::: render-commit-push
+Run all, commit, and sync.
 
-### Question 2
+<br>
 
-Read the `clubs.csv` file you created in Question 1 into your Quarto document.
-
-The `club_type_detail` variable contains two pieces of information for most (though not all) clubs:
-
--   Many of the entries are of the form `House/Quad Council - Housing & Residence Life` or `Open Membership (DSG) - Faith, Religion, & Spirituality`, where the piece before the hyphen (`-`) is `club_type` while the piece after the hyphen is `detail`.
--   Some of the entries are of the form `Student Government` or `Student Affairs Unit`, basically just `club_type` but no `detail`.
-
-Separate the `club_type` variable into two, `club_type` and `detail`, and then trim any extraneous white space from the resulting variables, as needed.
-Save the resulting dataset with these two new variables as `clubs`, i.e., overwrite the data frame.
-
-Then, display the first 10 rows of the dataset, `relocate()`ing `club_type` and `detail` variables to the beginning of the dataset to make sure they appear in the output in your rendered document.
-
-### Question 3
-
-Another variable that needs some cleaning up is `membership_status`.
-Currently it should either be `NA` or contain some text that says `"Select ... to register for this group"`.
-Recode this variable to say `"Closed"` if the current value is `NA` or `"Open"` otherwise.
-Save the resulting dataset with these two new variables as `clubs`, i.e., overwrite the data frame.
-
-Then, display the first 10 rows of the dataset, `relocate()`ing `membership_status` to the beginning of the dataset to make sure it appears in the output in your rendered document.
-
-::: callout-warning
-At this point you should have a `clubs` dataset with seven columns in the following order:
-
-1.  `name`
-2.  `resources`
-3.  `club_type`
-4.  `detail`: May be blank for some clubs
-5.  `membership_type`
-6.  `membership_status`: with values `Open` and `Closed`
-7.  `url`
-
-If your dataset has a structure of columns different than what's outlined above, go back to earlier exercises and review your answers.
+Make sure that you commit and push all changed documents and your Git pane is completely empty before proceeding.
 :::
 
-## Part 3 - Data analysis
+# Part 2 - DatasauRus
 
-### Question 4
+The data frame you will be working with in this part is called `datasaurus_dozen.csv`.
+This single data frame contains 13 datasets, designed to show us why data visualization is important and how summary statistics alone can be misleading.
+The different datasets are marked by the `dataset` variable, as shown in @fig-datasaurus.
 
-Solve each of the following questions (parts) with a single pipeline.
-
-a.  Find the distinct `membership_type`s and the number of clubs with each type of membership.
-b.  Find the number of clubs that have a Mission statement.
-c.  Find the clubs that are `Greek` and mention `Faith` in their detail.
-
-### Question 5
-
-Recreate the following table in a single pipeline.
-
-![](images/clubs-table.png){fig-align="center" width="400"}
-
-::: callout-tip
-## Hint
-
--   First, count the number of clubs that fall into each `club_type` and `membership_status`.
-
--   Then, pivot the resulting data frame so the levels of `membership_status` are across two columns as opposed to in a single column.
-
--   Read the documentation for the pivoting function you're using to discover how you can replace `NA`s with 0s while pivoting the data.
-
--   Create a new column `Total` that is the sum of `Closed` and `Open` columns.
-
--   Use the `kable()` function (refer back to your take-home exam if you need a hint) to nicely format your table.
-:::
-
-### Question 6
-
-Ask a *simple* question of interest to you about student clubs at Duke that you can answer with these data.
-Then, answer your question in a single pipeline and a brief narrative describing your findings.
-If your question is too complex to answer in a single pipeline, go back and revise your question.
-
-### Question 7
-
-Ask another question of interest to you about student clubs at Duke that you can answer with a visualization of these data.
-Then, answer your question, with a visualization and a brief narrative describing your findings.
+![The `datasaurus_dozen` data frame stacks 13 datasets on top of each other. This figure shows the first three datasets.](images/datasaurus-dozen.png){#fig-datasaurus fig-align="center" width="432"}
 
 ::: callout-note
-If you are collaborating with classmates and brainstorming possible questions together, make sure the questions you choose are unique to you.
+If it's confusing that the data frame is called `datasaurus_dozen` when it contains 13 datasets, you're not alone!
+Have you heard of a [baker's dozen](https://www.mentalfloss.com/article/32259/why-bakers-dozen-13)?
 :::
 
-## Part 4 - Ethics
+Here is a peek at the top 10 rows of the dataset:
+
+```{python}
+#| eval: true
+datasaurus = pd.read_csv("data/datasaurus_dozen.csv")
+print(datasaurus.head(10))
+```
+
+## Question 3
+
+In a single pipeline, calculate the mean of `x`, mean of `y`, standard deviation of `x`, standard deviation of `y`, and the correlation between `x` and `y` for each level of the `dataset` variable.
+Then, in 1-2 sentences, comment on how these summary statistics compare across groups (datasets).
+
+::: callout-tip
+There are 13 groups but `DataFrame`s only print out 10 rows by default.
+Add `print(n = 13)` as the last step of your pipeline to display all rows.
+:::
+
+## Question 4
+
+Create a scatterplot of `y` versus `x` and color and facet it by `dataset`.
+Then, in 1-2 sentences, how these plots compare across groups (datasets).
+How does your response in this question compare to your response to the previous question and what does this say about using visualizations and summary statistics when getting to know a dataset?
+
+::: render-commit-push
+Run all, commit, and sync.
+
+<br>
+
+Make sure that you commit and push all changed documents and your Git pane is completely empty before proceeding.
+:::
+
+# Part 3 - Election polling
+
+SurveyUSA polled 1,500 US adults between January 31, 2024 and February 2, 2024.
+Of the 1,500 adults, 1,259 were identified by SurveyUSA as being registered to vote, and of these 1,048 were found to be likely to vote in the 2024 November election for President.[^1]
+The following question was asked to these 1,048 adults:
+
+[^1]: Full survey results can be found at <https://www.surveyusa.com/client/PollReport.aspx?g=300d50f5-303b-4652-b59e-6fbf1b87e24a>.
+
+> 1,048 were found to be likely to vote in the 2024 November election for President and were asked the substantive questions which follow.
+
+Responses were broken down into the following categories:
+
+| Variable | Levels                                     |
+|:---------|:-------------------------------------------|
+| Age      | 18-49; 50+                                 |
+| Vote     | Donald Trump (R); Joe Biden (D); Undecided |
+
+Of the 1,048 responses, 507 were between the ages of 18-49.
+Of the individuals that are between 18-49, 238 individuals responded that they would vote for Donald Trump, 237 said they would vote for Joe Biden, and the remainder were undecided.
+Of the individuals that are 50+, 271 individuals responded that they would vote for Donald Trump, 228 said they would vote for Joe Biden, and the remainder were undecided.
+
+## Question 5
+
+a.  Fill in the code below to create a two-way table that summarizes these data.
+
+    ```{python}
+    #| eval: false
+
+    survey_counts = pd.DataFrame({
+        'age': ['18-49', '18-49', '18-49', '50+', '50+', '50+'],
+        'vote': ['Donald Trump', 'Joe Biden', 'Undecided', 'Donald Trump', 'Joe Biden', 'Undecided'],
+        'n': [238, 237, 507-238-237, 271, 228, 271+228-271-228]
+    })
+
+    survey_pivot = survey_counts.pivot(index='age', columns='vote', values='n')
+    survey_pivot
+    ```
+
+For parts b-d below, use a your response single pipeline starting with `survey_counts`, calculate the desired proportions, and make sure the result is an **ungrouped** data frame with a column for relevant counts, a column for relevant proportions, and a column for the groups you're interested in.
+
+b.  Calculate the proportions of 18-49 year olds and 50+ year olds in this sample.
+
+c.  Calculate the proportions of those who want to vote for Donald Trump, Joe Biden, and those who are undecided in this sample.
+
+d.  Calculate the proportions of individuals in this sample who are planning to vote for each of the candidates or are undecided among those who are 18-49 years old as well as among those who are 50+ years old.
+
+## Question 6
+
+a.  Re-create the following visualization that displays relationship between `age` and `vote`.
+
+    ![](images/surveyusa-trump-biden.png){width="500"}
+
+    ::: callout-tip
+    The colors used in the plot are `"#E81B23"`, `"#0015BC"`, and `"#808080"`.
+    The theme is `sns.set_theme(style="whitegrid")`
+    :::
+
+b.  Based on your calculations so far, as well as your visualization, write 1-3 sentences that describe the relationship, in this sample, between age and plans for presidential vote.
+
+::: render-commit-push
+Run all, commit, and sync.
+
+<br>
+
+Make sure that you commit and push all changed documents and your Git pane is completely empty before proceeding.
+:::
+
+# Part 4 - Ethics
 
 ::: callout-important
 The following two questions ask you to summarize articles on data science ethics.
@@ -246,7 +194,7 @@ You are not allowed to use Chat GPT or similar tools in answering these question
 Please be ethical, at a minimum when discussing ethics!
 :::
 
-### Question 8
+## Question 7
 
 For each of the following websites, first determine whether you're allowed to scrape data from them using tools we've learned in this course.
 
@@ -260,12 +208,12 @@ Finally, summarize your findings about whether you can or cannot scrape data fro
 Additionally, quote the relevant sentence(s) from the Terms of Use/Service.
 
 ::: callout-tip
-## Hint
+### Hint
 
 In the Terms of Use/Service documents, it might be productive to search for keywords like "scrape" or "scraping" to find the relevant portions.
 :::
 
-### Question 9
+## Question 8
 
 One current ethical discussion in data science involves the training of "Large Language Models" such as ChatGPT.
 These models are trained using massive corpora (document sets) that include large amounts of work that is covered under copyright law.
@@ -276,7 +224,7 @@ Read the following two articles:
 
 Write a short paragraph (maximum 8 sentences) discussing the arguments on both sides of the discussion over copyright in training large language models.
 
-### Question 10
+## Question 9
 
 Another major ethical discussion in data science resolves around discriminatory biases in machine learning models.
 These biases can have real-world impacts in lending, criminal justice, hiring, and more.
@@ -288,26 +236,35 @@ Read the following articles:
 
 Write a short paragraph (maximum 8 sentences) discussing the nature of biases in machine learning and in datasets, and any possible solutions that could help limit those biases.
 
+## Question 10
+
+To complete this exercise you will first need to watch the documentary Coded Bias.
+To do so, you either need to be on the Duke network or connected to the Duke VPN. Then go to [U of A Libraries Permalink](https://arizona-primo.hosted.exlibrisgroup.com/permalink/f/6ljalh/01UA_ALMA51833593910003843){.uri} and click on "View Online".
+Once you watch the video, write a reflection in 2-5 bullet points highlighting at least one thing that you already knew about (from the course prep materials) and at least one thing you learned from the movie as well as any other aspects of the documentary that you found interesting / enlightening.
+
+::: callout-important
+This question requires no code, only narrative.
+Remember that, based on the [syllabus](https://datasciaz.netlify.app/course-syllabus.html), you may not use generative AI tools (e.g., Chat GPT) to write narrative on assignments.
+:::
+
+::: render-commit-push
+Run all, commit, and sync one last time.
+
+<br>
+
+Make sure that you commit and push all changed documents and your Git pane is completely empty before proceeding.
+:::
+
 # Wrap-up
 
 ## Submission
-
-Once you are finished with the lab, you will submit your final PDF document to Gradescope.
 
 ::: callout-warning
 Before you wrap up the assignment, make sure all of your documents are updated on your GitHub repo.
 We will be checking these to make sure you have been practicing how to commit and push changes.
 
-You must turn in a PDF file to the Gradescope page by the submission deadline to be considered "on time".
+You must turn in the .ipynb file by the submission deadline to be considered "on time".
 :::
-
-To submit your assignment:
-
--   Go to <http://www.gradescope.com> and click *Log in* in the top right corner.
--   Click *School Credentials* $\rightarrow$ *Duke NetID* and log in using your NetID credentials.
--   Click on your *STA 199* course.
--   Click on the assignment, and you'll be prompted to submit it.
--   Mark all the pages associated with question. All the pages of your lab should be associated with at least one question (i.e., should be "checked").
 
 ::: callout-important
 ## Checklist
@@ -315,17 +272,15 @@ To submit your assignment:
 Make sure you have:
 
 -   attempted all questions
--   rendered your Quarto document
--   committed and pushed everything to your GitHub repository such that the Git pane in RStudio is empty
--   uploaded your PDF to Gradescope
--   selected pages associated with each question on Gradescope
+-   run all code in your Jupyter notebook
+-   committed and pushed everything to your GitHub repository such that the Git pane in VS Code is empty
 :::
 
 ## Grading
 
 The lab is graded out of a total of 50 points.
 
-You can earn up to 5 points on each question:
+On Questions 1 through 10, you can earn up to 5 points on each question:
 
 -   5: Response shows excellent understanding and addresses all or almost all of the rubric items.
 
