--- a/labs/lab-5.qmd
+++ b/labs/lab-5.qmd
@@ -1,323 +1,212 @@
 ---
-title: "Lab 5 - Potpourri"
+title: "Lab 5 - Probability and Simpson's Paradox"
 categories: "Lab"
+jupyter: python3
+execute: 
+  warning: false
+  error: false
 ---
 
-```{r}
+::: callout-important
+This is a *Team* Lab, meaning you can and should work with your project team on it.
+:::
+
+```{python}
 #| include: false
 #| eval: true
 
-library(datasauRus)
-library(tidyverse)
+import pandas as pd
+import seaborn as sns
+import matplotlib.pyplot as plt
 ```
 
 # Introduction
 
-In this lab you'll review and get practice with a variety of concepts, methods, and tools you've encountered thus far.
+In this lab you'll review and get practice with a variety of concepts, methods, and tools you've encountered thus far, with a focus on misrepresentation and ethics.
 
-# Part 1 - All about Quarto
+## Learning objectives
 
-## Question 1
+By the end of the lab, you will...
 
-a.  Add each of strings below to the code chunk provided in your document, render the document, and determine if the string is a proper code chunk label.
-    If not, explain why and describe how you could fix it so the document renders.
+-   Calculate single event, conditional, and "and" probabilities.
+-   Interpret probabilities in the context of the problem.
+-   Display a fundamental understanding of Simpson's Paradox.
+-   Practice teamwork and collaboration on GitHub.
 
-    -   Chunk label 1:
+## Guidelines
 
-    ```         
-    #| label: a-label 
-    #| with-a-line-break
-    ```
-
-    -   Chunk label 2:
-
-    ```         
-    #| label: areaaaaaaaaaaaaaaaaaaaaaallllllllllllllllllyyyyylooooooooooooooooooonglabel 
-    ```
-
-    -   Chunk label 3:
-
-    ```         
-    #| label: label with spaces
-    ```
-
-    -   Chunk label 4:
-
-    ```         
-    #| label: label-with-dashes
-    ```
-
-    ::: callout-tip
-    Try each label option in the code chunk provided in your document.
-    If it gives you an error (document doesn't render), you know it's not a proper chunk label.
-    :::
-
-b.  Which of the chunk label options above is the best option?
-    Explain your reasoning in 1-2 sentences.
-
-## Question 2
-
-You have the following code chunk:
-
-```{r}
-#| eval: false
-    
-ggplot(penguins, aes(x = bill_length_mm, y = bill_depth_mm)) + 
-  geom_point()
-```
-
-Add the following code chunk options, one at a time, and set each to `false` and then to `true`.
-After each value, render your document and observe its effect.
-Ultimately, choose the values that are the most appropriate for this code chunk.
-Based on the behaviors you observe, describe what each code chunk option does.
-
--   `echo`
--   `warning`
--   `eval`
-
-## Question 3
-
-a.  You have the following code chunk again.
-
-    ```{r}
-    #| eval: false
-
-    ggplot(penguins, aes(x = bill_length_mm, y = bill_depth_mm)) + 
-      geom_point()
-    ```
-
-    Add `fig-width` and `fig-asp` as code chunk options.
-    Try setting `fig-width` to values between 1 and 10.
-    Try setting `fig-asp` to values between 0.1 and 1.
-    Re-render the document after each value and observe its effect.
-    Ultimately, choose values that make the plot look visually pleasing in the rendered document.
-    Based on the behavior you observe, describe what each chunk option does.
-
-b.  You have the following code chunk, but look carefully, it's not exactly the same!
-
-    ```{r}
-    #| eval: false
-
-    gplot(penguins, aes(x = bill_length_mm, y = bill_depth_mm)) + 
-      geom_point()
-    ```
-
-    Add `error` as a code chunk option and set it to `false` and then set it to `true`.
-    After each value, render your document and observe its effect.
-    Ultimately, choose the value that allows you to render your document without altering the code.
-    Based on the behavior you observe, describe what this code chunk option does.
-
-::: callout-tip
-Reading [the documentation](https://quarto.org/docs/reference/formats/pdf.html#execution) might also be hepful.
-:::
-
-::: render-commit-push
-Render, commit, and push one last time.
-Make sure that you commit and push all changed documents and your Git pane is completely empty before proceeding.
-
-<br>
-:::
-
-# Part 2 - Misrepresentation
-
-## Question 4
-
-The following chart was [shared](https://twitter.com/GraphCrimes/status/1566264004288331776) by \@GraphCrimes on X/Twitter on September 3, 2022.
-
-![](images/private-sector.png){fig-align="center"}
-
-a.  What is misleading about this graph?
-b.  Suppose you wanted to recreate this plot, with improvements to avoid its misleading pitfalls from part (a). You would obviously need the data from the survey in order to be able to do that. How many observations would this data have? How many variables (at least) should it have, and what should those variables be?
-c.  Load the data for this survey from `data/survation.csv`. Confirm that the data match the percentages from the visualization. That is, calculate the percentages of public sector, private sector, don't know for each of the services and check that they match the percentages from the plot.
-
-## Question 5
-
-Create an improved version of the visualization.
-Your improved visualization:
-
--   should also be a stacked bar chart with services on the y-axis, presented in the same order as the original plot, and services to create the segments of the plot, and presented in the same order as the original plot
-
--   should have the same legend location
-
--   should have the same title and caption
-
--   does not need to have a bolded title or a gray background
-
-How does the improved visualization look different than the original?
-Does it send a different message at a first glance?
-
-::: callout-tip
-Use `\n` to add a line break to your title.
-And note that since the title is very long, it might run off the page in your code.
-That's ok!
-
-Additionally, the colors used in the plot are `gray`, `#FF3205`, and `#006697`.
-:::
-
-::: render-commit-push
-Render, commit, and push one last time.
-Make sure that you commit and push all changed documents and your Git pane is completely empty before proceeding.
-
-<br>
-:::
-
-# Part 3 - DatasauRus
-
-The data frame you will be working with in this part is called `datasaurus_dozen` and it's in the **datasauRus** package.
-This single data frame contains 13 datasets, designed to show us why data visualization is important and how summary statistics alone can be misleading.
-The different datasets are marked by the `dataset` variable, as shown in @fig-datasaurus.
-
-![The \`datasaurus_dozen\` data frame stacks 13 datasets on top of each other. This figure shows the first three datasets.](images/datasaurus-dozen.png){#fig-datasaurus fig-align="center" width="432"}
+As we've discussed in lecture, your plots should include an informative title, axes should be labeled, and careful consideration should be given to aesthetic choices.
 
 ::: callout-note
-If it's confusing that the data frame is called `datasaurus_dozen` when it contains 13 datasets, you're not alone!
-Have you heard of a [baker's dozen](https://www.mentalfloss.com/article/32259/why-bakers-dozen-13)?
+Remember that continuing to develop a sound workflow for reproducible data analysis is important as you complete the lab and other assignments in this course.
+There will be periodic reminders in this assignment to remind you to **Run all, commit, and sync** your changes to GitHub.
+You should have at least 3 commits with meaningful commit messages by the end of the assignment.
 :::
 
-Here is a peek at the top 10 rows of the dataset:
+# Getting started
 
-```{r}
-#| eval: true
+All team members should clone the team GitHub repository for the lab.
+Then, one team member should edit the document Markdown cell by adding the team name to the `subtitle` field and adding the names of the team members contributing to lab to the `author` field.
+Hopefully that's everyone, but if someone doesn't contribute during the lab session or throughout the week before the deadline, their name should not be added.
+If you have 4 members in your team, you can delete the line for the 5th team member.
+Then, this team member should render the document and commit and push the changes.
+All others should **not** touch the document at this stage.
 
-datasaurus_dozen
+``` yaml
+title: "Lab 5 - Probability and Simpson’s Paradox"
+subtitle: "Team name"
+author: 
+  - "Team member 1"
+  - "Team member 2"
+  - "Team member 3"
+  - "Team member 4"
+  - "Team member 5"
+format: pdf
+editor: visual
+execute:
+  echo: fenced
 ```
 
-## Question 6
-
-In a single pipeline, calculate the mean of `x`, mean of `y`, standard deviation of `x`, standard deviation of `y`, and the correlation between `x` and `y` for each level of the `dataset` variable.
-Then, in 1-2 sentences, comment on how these summary statistics compare across groups (datasets).
-
-::: callout-tip
-There are 13 groups but `tibble`s only print out 10 rows by default.
-Add `print(n = 13)` as the last step of your pipeline to display all rows.
-:::
-
-## Question 7
-
-Create a scatterplot of `y` versus `x` and color and facet it by `dataset`.
-Then, in 1-2 sentences, how these plots compare across groups (datasets).
-How does your response in this question compare to your response to the previous question and what does this say about using visualizations and summary statistics when getting to know a dataset?
-
-::: callout-tip
-When you both color and facet by the same variable, you'll end up with a redundant legend.
-Turn off the legend by adding `show.legend = FALSE` to the geom creating the legend.
-:::
-
-::: render-commit-push
-Render, commit, and push one last time.
-Make sure that you commit and push all changed documents and your Git pane is completely empty before proceeding.
-
-<br>
-:::
-
-# Part 4 - Election polling
-
-SurveyUSA polled 1,500 US adults between January 31, 2024 and February 2, 2024.
-Of the 1,500 adults, 1,259 were identified by SurveyUSA as being registered to vote, and of these 1,048 were found to be likely to vote in the 2024 November election for President.[^1]
-The following question was asked to these 1,048 adults:
-
-[^1]: Full survey results can be found at <https://www.surveyusa.com/client/PollReport.aspx?g=300d50f5-303b-4652-b59e-6fbf1b87e24a>.
-
-> 1,048 were found to be likely to vote in the 2024 November election for President and were asked the substantive questions which follow.
-
-Responses were broken down into the following categories:
-
-| Variable | Levels                                     |
-|:---------|:-------------------------------------------|
-| Age      | 18-49; 50+                                 |
-| Vote     | Donald Trump (R); Joe Biden (D); Undecided |
-
-Of the 1,048 responses, 507 were between the ages of 18-49.
-Of the individuals that are between 18-49, 238 individuals responded that they would vote for Donald Trump, 237 said they would vote for Joe Biden, and the remainder were undecided.
-Of the individuals that are 50+, 271 individuals responded that they would vote for Donald Trump, 228 said they would vote for Joe Biden, and the remainder were undecided.
-
-## Question 8
-
-a.  Fill in the code below to create a two-way table that summarizes these data.
-
-    ```{r}
-    #| eval: false
-
-    survey_counts <- tibble( 
-      age = c(),
-      vote = c(),
-      n = c()
-      )
-
-    survey_counts |>
-      pivot_wider( 
-        names_from = ___,
-        values_from = ___
-      ) |>
-      kable()
-    ```
-
-For parts b-d below, use a your response single pipeline starting with `survey_counts`, calculate the desired proportions, and make sure the result is an **ungrouped** data frame with a column for relevant counts, a column for relevant proportions, and a column for the groups you're interested in.
-
-b.  Calculate the proportions of 18-49 year olds and 50+ year olds in this sample.
-
-c.  Calculate the proportions of those who want to vote for Donald Trump, Joe Biden, and those who are undecided in this sample.
-
-d.  Calculate the proportions of individuals in this sample who are planning to vote for each of the candidates or are undecided among those who are 18-49 years old as well as among those who are 50+ years old.
-
-## Question 9
-
-a.  Re-create the following visualization that displays relationship between `age` and `vote`.
-
-    ![](images/surveyusa-trump-biden.png){width="500"}
-
-    ::: callout-tip
-    The colors used in the plot are `"#E81B23"`, `"#0015BC"`, and `"gray"`.
-    The theme is `theme_minimal()`.
-    :::
-
-b.  Based on your calculations so far, as well as your visualization, write 1-3 sentences that describe the relationship, in this sample, between age and plans for presidential vote.
-
-::: render-commit-push
-Render, commit, and push one last time.
-Make sure that you commit and push all changed documents and your Git pane is completely empty before proceeding.
-
-<br>
-:::
-
-# Part 5 - Ethics
-
-## Question 10
-
-To complete this exercise you will first need to watch the documentary Coded Bias.
-To do so, you either need to be on the Duke network or connected to the Duke VPN. Then go to <https://find.library.duke.edu/catalog/DUKE009834953> and click on "View Online".
-Once you watch the video, write a reflection in 2-5 bullet points highlighting at least one thing that you already knew about (from the course prep materials) and at least one thing you learned from the movie as well as any other aspects of the documentary that you found interesting / enlightening.
+# Questions
 
 ::: callout-important
-This question requires no code, only narrative.
-Remember that, based on the [syllabus](https://sta199-s24.github.io/course-syllabus.html#academic-honesty), you may not use generative AI tools (e.g., Chat GPT) to write narrative on assignments.
+Pick another member of the team write the answer to Part 1.
+All others should contribute to the discussion but only one person should type up the answer, render the document, commit, and push to GitHub.
+All others should **not** touch the document.
 :::
 
-::: render-commit-push
-Render, commit, and push one last time.
-Make sure that you commit and push all changed documents and your Git pane is completely empty before proceeding.
+## Part 1 - Probability and you
+
+### Question 1
+
+We use probabilities all the time when making decisions.
+*As a group*, provide *two* real world examples of when you've used probability to make decisions in your every day life.
+Think critically.
+Be creative.
+
+::: callout-important
+After the team member working on Part 1 renders, commits, and pushes, another team member should pull their changes and render the document.
+Then, they should write the answer to Part 2.
+All others should contribute to the discussion but only one person should type up the answer, render the document, commit, and push to GitHub.
+All others should **not** touch the document.
 :::
+
+## Part 2 - Risk of coronary heart disease
+
+This data set is from an ongoing cardiovascular study on residents of the town of Framingham, Massachusetts.
+We want to examine the relationship between various health characteristics and the risk of having heart disease.
+
+### Question 2
+
+Load in the data set called `education-disease` and answer the following questions below.
+
+### Question 3
+
+How many levels of education are there in these data?
+How many levels of disease are there?
+**Hint:** The `unique()` function might be helpful.
+
+### Question 4
+
+Convert the data to a two-way table where each cell is the number of people falling into each combination of Disease and Education.
+**Hint:** Use `groupby` and `pivot_table`.
+Your answer should be a 4x3 data frame with counts in each cell.
+
+```{python}
+# add code here.
+```
+
+Using the summary table you created above, answer the remaining questions.
+You do not have to use Python functions for your calculations, you can use Python as a calculator using the values from the summary table.
+Make sure to show your work, i.e., instead of reporting just the final answer, use Python to calculate that in a way we can see the counts you've used along the way.
+
+### Question 5
+
+What is the probability of a random individual having high school or GED education and not being high risk for cardiovascular disease?
+
+### Question 6
+
+What is the probability that a random individual who is already high risk for cardiovascular disease has a college education?
+
+::: callout-important
+After the team member working on Part 2 renders, commits, and pushes, another team member should pull their changes and render the document.
+Then, they should write the answer to Part 3.
+All others should contribute to the discussion but only one person should type up the answer, render the document, commit, and push to GitHub.
+All others should **not** touch the document.
+:::
+
+## Part 3 - Bike rentals
+
+Bike sharing systems are new generation of traditional bike rentals where whole process from membership, rental and return back has become automatic.
+You are tasked to investigate the relationship between the temperature outside and the number of bikes rented in the Washington DC area between the years 2011 and 2022.
+You will be investigating data for the months June, July, September, and November.
+
+Below is a list of variables and their definitions:
+
+| Variable  | Definition                                                                     |
+|-----------------|-------------------------------------------------------|
+| `season`  | Numerical representation of Spring (2), Summer (3), and Fall (4)               |
+| `year`    | Numerical representation of 2011 (0) or 2012 (1)                               |
+| `month`   | Month in which data were collected                                             |
+| `holiday` | Indicator variable for whether data were collected on a holiday (1) or not (0) |
+| `weekday` | Numerical representation of day of week                                        |
+| `temp`    | Temperature in Celsius                                                         |
+| `count`   | Number of bike rentals for that day                                            |
+
+### Question 7
+
+(a) Read in the data.
+    Then, create a scatter plot that investigates the relationship between the number of bikes rented and the temperature outside.
+    Include a straight line of best fit to help discuss the discovered relationship.
+    Summarize your findings in 2-3 sentences.
+
+(b) Another researcher suggests to look at the relationship between bikes rented and temperature by each of the four months of interest.
+    Recreate your plot in part a, and color the points by month.
+    Include a straight line for each of the four months to help discuss each month's relationship between bikes rented and temperature.
+    In 3-4 sentences, summarize your findings.
+
+Please watch the following video on Simpson's Paradox [here](https://www.youtube.com/watch?v=ebEkn-BiW5k).
+After you do, please answer the following questions.
+
+### Question 8
+
+In your own words, summarize Simpson's Paradox in 2-3 sentences.
+
+### Question 9
+
+Compare and contrast your findings from part (a) and part (b).
+What's different?
+
+### Question 10
+
+Think critically about your answer to part d.
+What other context from this study could be creating this paradox?
+That is, identify a potential confounding
+
+# Closing an issue with a commit
+
+Go to your GitHub repository, you will see an issue with the title "Learn to close an issue with a commit".
+
+Your goal is to close this issue with a commit to practice this workflow, which is the workflow you will use when you are addressing feedback on your projects.
+
+-   Go to the relevant section in your lab .ipynb file.
+-   Delete the sentence that says "Delete me".
+-   Render the document.
+-   Commit your changes from the git tab with the commit message *"Delete sentence, closes #1."*
+-   Push your changes to your repo and observe that the issue is now closed and the commit associated with this move is linked from the issue.
+
+GitHub allows you to close an issue directly with commits if the commit uses one of the following keywords followed bu the issue number (which you can find next to the issue title): close, closes, closed, fix, fixes, fixed, resolve, resolves, and resolved.
 
 # Wrap-up
 
 ## Submission
 
-Once you are finished with the lab, you will submit your final PDF document to Gradescope.
-
 ::: callout-warning
 Before you wrap up the assignment, make sure all of your documents are updated on your GitHub repo.
 We will be checking these to make sure you have been practicing how to commit and push changes.
 
-You must turn in a PDF file to the Gradescope page by the submission deadline to be considered "on time".
+You must turn in the .ipynb file by the submission deadline to be considered "on time".
 :::
-
-To submit your assignment:
-
--   Go to <http://www.gradescope.com> and click *Log in* in the top right corner.
--   Click *School Credentials* $\rightarrow$ *Duke NetID* and log in using your NetID credentials.
--   Click on your *STA 199* course.
--   Click on the assignment, and you'll be prompted to submit it.
--   Mark all the pages associated with question. All the pages of your lab should be associated with at least one question (i.e., should be "checked").
 
 ::: callout-important
 ## Checklist
@@ -325,17 +214,15 @@ To submit your assignment:
 Make sure you have:
 
 -   attempted all questions
--   rendered your Quarto document
--   committed and pushed everything to your GitHub repository such that the Git pane in RStudio is empty
--   uploaded your PDF to Gradescope
--   selected pages associated with each question on Gradescope
+-   run all code in your Jupyter notebook
+-   committed and pushed everything to your GitHub repository such that the Git pane in VS Code is empty
 :::
 
 ## Grading
 
 The lab is graded out of a total of 50 points.
 
-You can earn up to 5 points on each question:
+On Questions 1 through 10, you can earn up to 5 points on each question:
 
 -   5: Response shows excellent understanding and addresses all or almost all of the rubric items.
 
